@@ -4,6 +4,8 @@ Revision history for Perl extension FSA::Rules.
       - Added test to prevent future memory leaks.
       - Fixed another memory leak caused by circular rule references. Thanks
         to Alceu Rodrigues de Freitas Junior for the report!
+      - Skipped test that causes Data::Dumper to segfault on Perl 5.6. Only
+        happens when the machine has recursive rules.
 
 0.32  2013-10-16T18:38:59Z
       - Fixed a memory leak that prevented any FSA::Rules object from being
